--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
+  "devDependencies": {
+    "http-server": "^14.1.1",
+    "jest": "^29.1.2"
+  },
   "name": "mitxpro-holy-grail",
   "version": "1.0.0",
-  "description": "",
+  "description": "node app for holy grail",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cskaroulis/MITxPRO-holy-grail.git"
+  },
+  "author": "cskaroulis@yahoo.com",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cskaroulis/MITxPRO-holy-grail/issues"
+  },
+  "homepage": "https://github.com/cskaroulis/MITxPRO-holy-grail#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
